# libgarmin

libgarmin/dev/: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  Makefile.inc  README  TODO  autosh.sh  config.h.in  configure  configure.ac  libgarmin.pc.in
libgarmin/dev/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
libgarmin/dev/data/: Makefile.am  Makefile.in  garmintypes.txt
libgarmin/dev/src/: GarminTypedef.h  Makefile.am  Makefile.in  align.h  array.c  array.h  bsp.c  bsp.h  extras.h  garmin.c  garmin_fat.c  garmin_fat.h  garmin_lbl.c  garmin_lbl.h  garmin_mdr.c  garmin_mdr.h  garmin_mps.c  garmin_net.c  garmin_net.h  garmin_nod.c  garmin_nod.h  garmin_obj.c  garmin_order.c  garmin_order.h  garmin_rgn.c  garmin_rgn.h  garmin_route.c  garmin_subdiv.c  garmin_subdiv.h  garmin_tdb.c  garmin_tdb.h  garmin_typ.c  geoutils.c  geoutils.h  libgarmin.h  libgarmin_priv.h  list.h  win32support.h
libgarmin/dev/utils/: Makefile.am  Makefile.in  bsptest.c  garroute.c  gartest.c  garxor.c  garxtract.c
navit/dev/: configure.in
navit/dev/po/: Makefile.am  cs.po.in  da.po.in  de.po.in  es.po.in  fi.po  fi.po.in  fr.po.in  it.po.in  nl.po  nl.po.in  no.po.in  pl.po  ru.po.in
navit/dev/src/: Makefile.am  attr.c  attr.h  attr_def.h  callback.c  cfg.c  cfg.h  color.c  color.h  country.c  debug.c  debug.h  globals.h  gpssource.c  gpssource.h  graphics.c  graphics.h  gui.c  item.c  item.h  layout.c  layout.h  list.c  list.h  log.c  log.h  main.c  map.c  map.h  mapset.c  mapset.h  menu.c  module.c  module.h  navigation.c  navigation.h  navit.c  navit.h  navit.xml  notify.c  (+12 more)
navit/dev/src/data/: Makefile.am
navit/dev/src/data/binfile/: binfile.c
navit/dev/src/data/garmin/: garmin.c
navit/dev/src/data/mg/: map.c
navit/dev/src/data/textfile/: textfile.c
navit/dev/src/etc/: colors.conf  friends.conf  garminmaps.conf  layers.conf  layout.conf  logger.conf  maps.conf  mgmaps.conf  modules.conf  navit.conf  route.conf  sources.conf  vehicle.conf
navit/dev/src/fib-1.1/: fib.c  fib.h  fibpriv.h
navit/dev/src/graphics/gtk_drawing_area/: graphics_gtk_drawing_area.c
navit/dev/src/graphics/null/: graphics_null.c
navit/dev/src/graphics/opengl/: graphics_opengl.c
navit/dev/src/gui/gtk/: datawindow.c  destination.c  gui_gtk_action.c  gui_gtk_window.c
navit/dev/src/gui/sdl/: Makefile.am  cegui_keyboard.h  gui_sdl_window.cpp  sdl_events.cpp
navit/dev/src/lib/: Makefile.am  cfg.c  cfg.h  text_buffer.c  text_buffer.h  util.c  util.h
navit/dev/src/modules/: Makefile.am  dbusgps.c  eventlog.c  filegps.c  gpsd.c  testmod.c  tflog.c  xmlconfig.c
navit/dev/src/speech/speech_dispatcher/: speech_speech_dispatcher.c
navit/dev/src/vehicle/gpsd/: Makefile.am
navit/dev/src/xpm/: Makefile.am  bridge.xpm  bus_station.xpm  casino.xpm  cemetery.xpm  civil.xpm  crossing.xpm  danger_area.xpm  dest.xpm  drinking_water.xpm  military.xpm  public_office.xpm  school.xpm  shopping.xpm  sport.xpm  stadium.xpm  zoo.xpm
navitdrv/dev/: Makefile  Makefile.am  Makefile.in  gar2navit.c  garmin.c  garmintypes.txt
navitdrv/dev/.deps/: gar2navit.Plo  garmin.Plo
web/: index.html
